# docmind

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/db/: database.py  models.py  repository.py  vector_store.py
app/models/: schemas.py
app/routers/: documents.py  qa.py
app/services/: chunker.py  embedder.py  parser.py  rag.py  storage.py
ui/: app.py
