[project]
name = "docmind"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "langchain-anthropic>=1.4.6",
    "langchain-litellm>=0.7.0",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langchain[anthropic]>=1.3.9",
    "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
docmind = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
